...
            android:gravity="center"
            android:text="@string/reminder_title"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/reminderTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@{reminderDataItem.title}"
            android:textSize="@dimen/text_size_medium"
            tools:text="Go to this zoo" />
...
            android:gravity="center"
            android:text="@string/reminder_desc"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/reminderDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@{reminderDataItem.description}"
            android:textSize="@dimen/text_size_medium"
            tools:text="Go to this zoo on May" />
...
